@@ -1,3 +1,3 @@
-confdb.version=V03-00-04
+confdb.version=V03-00-05
 confdb.contact=sandro.ventura@cern.ch
-confdb.url=https://confdb.web.cern.ch/confdb/v2-gpu/
+confdb.url=https://confdb.web.cern.ch/confdb/v3/
